# flock_map

./: .dockerignore  .env.example  .gitignore  Dockerfile.scraper  Dockerfile.server  docker-compose.yml  pyproject.toml  scheduled_scraper.py  scraper_config.toml
.github/workflows/: docker-images.yml
migrations/models/: 0001_postgis_setup.sql  0_20260330213951_init.py
scripts/: apply_postgis_setup.py  wait_for_db.py
src/flockmap/: app.py  config.py  dedupe.py
src/flockmap/api/: sightings.py  species.py
src/flockmap/models/: __init__.py  sighting.py  species.py
src/flockmap/schemas/: schemas.py
src/flockmap/scrapers/: __init__.py  base.py  ornitho.py
webapp/: Dockerfile  README.md  package-lock.json  package.json
webapp/public/: manifest.json  sw.js
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/api/sightings/nearby/: route.ts
webapp/src/app/api/sightings/viewport/: route.ts
webapp/src/app/api/species/: route.ts
webapp/src/app/api/species/[speciesId]/image/: route.ts
webapp/src/components/: bird-map.tsx
